--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.0",
+    "vue": "^3.2.13",
+    "vue-router": "^4.2.1",
+    "vuex": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
